Revision history for Perl distribution PathTools.

3.04

 - Remove lib/ppport.h from the distribution, so that MakeMaker
   doesn't accidentally pick it up and install it as a lib
   file. [Jerry Hedden]

 - Fixed a testing error on VMS that occurred when a user had
   read-access to the root of the current volume. [Craig A. Berry]

3.03  Fri Jan 21 21:44:05 CST 2005

 - Fixed a testing error if the first file we find in the root
   directory is a symlink. [Blair Zajac]

 - Added a test to make sure Cwd.pm is loaded from blib/ during
   testing, which seems to be an issue in some people's environments
   and makes it awfully hard to debug things on my end.

 - Skip the _perl_abs_path() tests on Cygwin - they don't usually
   pass, and this function isn't used there anyway, so I decided not
   to push it.  Let 'em use `cwd`.

3.02  Sun Jan  9 19:29:52 CST 2005

 - Fixed a bug in which Cwd::abs_path() called on a file in the root
   directory returned strange results. [Bob Luckin]

 - Straightened out the licensing details for the portion of the Cwd
   module that comes from BSD sources. [Hugo van der Sanden]

 - Removed the prototype from _perl_abs_path() and the XS version of
   abs_path(), since all they seemed to be doing was causing people
   grief, and since some platforms didn't have them anyway.

 - Fixed a testing bug in which sometimes the wrong version of Cwd
   (the version already installed on the user's machine) would get
   loaded instead of the one we're building & installing.

 - Sometimes getdcwd() returns a lower-case drive letter, so don't
   require an upper-case letter in t/win32.t. [Jan Dubois]

 - Fixed a memory leak in getdcwd() on win32. [Steve Hay]

 - Added a copy of ppport.h to the distribution to aid compilation on
   older versions of perl. [Suggested by Charlie Root]

 - Don't bother looking for a 'pwd' executable on MSWin32 - there
   won't be one, and looking for it can be extremely slow when lots of