@@ -1,5 +1,10 @@
 use Module::Build;
 
+my @compiler_flags;
+if ($] < 5.006 and Module::Build->y_n("Does your system define the getcwd() C library function?", 'y')) {
+  @compiler_flags = ('-DHAS_GETCWD');
+}
+
 my $class = Module::Build->subclass(code => <<'EOF');
 
   # See https://rt.cpan.org/NoAuth/Bug.html?id=4681 for why we add
@@ -33,6 +38,7 @@ my $class = Module::Build->subclass(code => <<'EOF');
     return { map {$_, $prereqs->{$_}} grep !/^Module::Build$/, keys %$prereqs };
   }
 
+  # Copy the ppport.h file to where it will be expected under Module::Build
   sub ACTION_code {
     my $self = shift;
     my $ppp = 'ppport.h';
@@ -74,6 +80,7 @@ my $build = $class->new
 		      'Module::Build' => '0.19',
 		     },
    xs_files       => { 'Cwd.xs' => 'lib/Cwd.xs' },
+   extra_compiler_flags => \@compiler_flags,
    sign => 1,
   );
 
